--- a/css/contact.css
+++ b/css/contact.css
@@ -1,57 +1,170 @@
-.main{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
+.content {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  align-content: center;
+  margin: auto;
+  gap: 2em;
 }
 
-.main__section1{
-    max-width: 20em;
-    margin: 15% 10% 10% 0;
- 
- 
+.body {
+  display: grid;
+  grid-template-areas:
+    "nav"
+    "main"
+    "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  justify-items: center;
+  background: var(--background);
 }
 
-.form{
-    display: grid;
-    grid-template-columns: auto;
-    margin: 3em;
-    
-}
-.textNone{
-    display: none;
-
-
-}
-
-
-.btn{
-    max-width: 10em;  
-    border-radius: 0.5em;
-    height: auto;
-}
-.main .form .form__formIn{
-    width: 20em;
-    margin: 1em 0;
-    border-radius: 0.75em;
-    height: 2em;
-    border: none;
-   
-}
-.gendercontainer{
-    margin: 0.25em;
-}
-.textMedium{
-    padding-left: 0.25em;
-}
-.main__header{
-    margin-bottom: 0.5em;
+.main {
+  grid-area: main;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: 1fr;
+  grid-template-areas: "contactMe form";
+  width: 100%;
+  align-items: center;
+  justify-items: center;
 }
 
+.contactMe {
+  grid-area: contactMe;
+  margin: 1em;
+  padding: 3em;
+  border: var(--outlineSize) solid var(--outline);
+  border-radius: 3em;
+  background-color: var(--surface);
+  color: var(--onSurface);
+  opacity: var(--primaryText);
+  box-shadow: rgb(0 0 0 / 3%) 0rem 0rem 1rem 0rem;
+}
 
+.contactMe__text {
+  max-width: 25em;
+  padding: 2em 0;
+}
 
-.textNone{
-    display: none;
+.form {
+  grid-area: form;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: flex-start;
+  margin: 1em;
+  padding: 3em;
+  gap: 2em;
+  border: var(--outlineSize) solid var(--outline);
+  border-radius: 3em;
+  background-color: var(--surface);
+  color: var(--onSurface);
+  opacity: var(--primaryText);
+  box-shadow: rgb(0 0 0 / 3%) 0rem 0rem 1rem 0rem;
+}
 
+.form__subBtn {
+  font-size: 1em;
+  font-weight: bold;
+  background-color: var(--primary);
+  color: var(--onPrimary);
+  border: 0em;
+  align-self: flex-end;
+  padding: 0.75em;
+  margin: 0.25em;
+  display: inline;
+  border-radius: 2em;
+}
 
+.form__input {
+  padding: 0.75em;
+  border: var(--outlineSize) solid var(--outline);
+  border-radius: 1em;
+  font-size: 1em;
+  width: 100%;
+}
+
+.form__input:focus {
+  border: var(--outlineSize) solid var(--primary);
+  mask-border: none;
+}
+
+.form__inputGrid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 0.4fr 1fr;
+  grid-template-columns: 0.3fr 1fr;
+  grid-auto-flow: row;
+  gap: 1em;
+  justify-items: start;
+  align-items: center;
+  justify-content: space-around;
+  align-content: center;
+}
+
+@media screen and (max-width: 66.5rem) {
+  .form__inputGrid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .main {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas: "contactMe" "form";
+    width: 100%;
+  }
+  .form__title {
+    font-size: 1.5em;
+  }
+  .contactMe__header {
+    font-size: 1.5em;
+  }
+}
+
+.socialMedias {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
+}
+
+.socialMedia__btn {
+  background: inherit;
+  border: 0;
+  font-size: 1.5em;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+  width: 1.5em;
+  height: 1.5em;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-blend-mode: multiply;
+}
+
+.socialMedia__btn:hover {
+  background-color: var(--primary);
+  transition: color 0.4s ease-in-out;
+  transition: background-color 0.4s ease-in-out;
+}
+
+.socialMedia__btn:hover .socialMedia__icon {
+  filter: invert();
+  transition: background-color 0.4s ease-in-out;
+}
+
+.socialMedia__icon {
+  background-color: transparent;
+  width: 1em;
+  height: 1em;
 }
