--- a/css/gallery.css
+++ b/css/gallery.css
@@ -34,7 +34,7 @@
     margin: 2em;
     background-image: url(../images/gaphoto3.png);
     width: 13em;
-    height: 15em;
+    height: 16em;
     padding: 10px;
     box-shadow: 3px 0px 9px rgb(164, 163, 163);
     color: black!important;
@@ -44,6 +44,13 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .main__section1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-right: 3em;
+}
+.another{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
